@@ -2,3 +2,6 @@
 test=pytest; pytest docs --nbval
 [tool:pytest]
 testpaths = tests
+markers =
+    requires_network: test requires network access
+    dataset: test will re-download datasets (skipped by default)
